Começando a tag header

--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descrição que apareçe ao pesquisar no Google"
-    <title>Landing Page</title>
+    <meta name="description" content="Precisando daquele cartão virtual? Venha para o JPay. Sem burocracia, sem anuidade e controle 100% pelo seu Smartphone"
+    <title>JPay</title>
 </head>
 
 <body>
-    
+    <header>
+        <img src="Logo.svg" alt="Logo do JPay Card">
+        <nav>
+            <a>Como funciona?</a>
+            <a>Para você</a>
+            <a>Fórum</a>
+            <a>Contato</a>
+        </nav>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
