--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Precisando daquele cartão virtual? Venha para o JPay. Sem burocracia, sem anuidade e controle 100% pelo seu Smartphone"
-    <title>JPay</title>
+    <meta name="description" content="Precisando daquele cartão virtual? Venha para o JPay. Sem burocracia, sem anuidade e controle 100% pelo seu Smartphone">
+    <title>JDog - Sua lanchonete virtual</title>
+    
 </head>
 
 <body>
     <header>
-        <img src="Logo.svg" alt="Logo do JPay Card">
+        <img src="Logo.png" alt="Logo do JPay Card">
         <nav>
             <a>Como funciona?</a>
-            <a>Para você</a>
-            <a>Fórum</a>
+            <a>Cardápio</a>
+            <a>Cadastro</a>
             <a>Contato</a>
         </nav>
     </header>
