HTML finalizado, rodapé com logo a trocar

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <img src="Logo.png" alt="Logo do JPay Card">
         <nav>
             <a>Como funciona?</a>
+            <a>Faça seu pedido!</a>
             <a>Cardápio</a>
             <a>Cadastro</a>
             <a>Contato</a>
@@ -21,11 +22,26 @@
     </header>
 
     <main>
+        <section>
+            <div>
+                <h1>Quat Cheddar Baccon</h1>
+                <h2>Encare se conseguir! Uma explosão de sabores que você nunca viu igual</h2>
+                <button>Peça o seu!</button>
+            </div>
+            <img src="quadruplo-cheddar-bacon.png" alt="Imagem do Quat Cheddar Baccon">
+        </section>
+            <h3>O que vem nesse MONSTRO?</h3>
+            <p>2 Fatias de pão brioche</p>
+            <p>4 Hamburgueres de 150g de fraldinha</p>
+            <p>4 Camadas de queijo cheddar</p>
+            <p>4 Camadas de Bacon crocantinho</p>
+        <section>
 
+        </section>
     </main>
 
     <footer>
-
+        <img src="Logo.png" alt="Logo Rodapé">
     </footer>
 </body>
 
