--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             </div>
             <img src="quadruplo-cheddar-bacon.png" alt="Imagem do Quat Cheddar Baccon">
         </section>
-            <h3>O que vem nesse MONSTRO?</h3>
-            <p>2 Fatias de pão brioche</p>
-            <p>4 Hamburgueres de 150g de fraldinha</p>
-            <p>4 Camadas de queijo cheddar</p>
+            <h3><strong>O que vem nesse MONSTRO?</strong></h3>
+            <p>2 Fatias de pãozão brioche</p>
+            <p>4 Hamburgueres de 150g de fraldinha no ponto</p>
+            <p>4 Camadas de queijo cheddar derretendo</p>
             <p>4 Camadas de Bacon crocantinho</p>
         <section>
 
