HTML finalizado, rodapé com logo a trocar

--- a/index.html
+++ b/index.html
@@ -10,38 +10,38 @@
 </head>
 
 <body>
-    <header>
-        <img src="Logo.png" alt="Logo do JPay Card">
-        <nav>
-            <a>Como funciona?</a>
-            <a>Faça seu pedido!</a>
-            <a>Cardápio</a>
-            <a>Cadastro</a>
-            <a>Contato</a>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="Logo.png" alt="Logo do JPay Card">
+        <nav class="menu-cabecalho">
+            <a class="item-menu-cabecalho">Como funciona?</a>
+            <a class="item-menu-cabecalho">Faça seu pedido!</a>
+            <a class="item-menu-cabecalho">Cardápio</a>
+            <a class="item-menu-cabecalho">Cadastro</a>
+            <a class="item-menu-cabecalho">Contato</a>
         </nav>
     </header>
 
-    <main>
-        <section>
-            <div>
-                <h1>Quat Cheddar Baccon</h1>
-                <h2>Encare se conseguir! Uma explosão de sabores que você nunca viu igual</h2>
-                <button>Peça o seu!</button>
+    <main class="main">
+        <section class="conteudo-main">
+            <div class="main-escrito">
+                <h1 class="main-titulo">Quat Cheddar Baccon</h1>
+                <h2 class="main-subtiitulo">Encare se conseguir! Uma explosão de sabores que você nunca viu igual</h2>
+                <button class="main-botao">Peça o seu!</button>
             </div>
-            <img src="quadruplo-cheddar-bacon.png" alt="Imagem do Quat Cheddar Baccon">
+            <img class="imagem-principal"  src="quadruplo-cheddar-bacon.png" alt="Imagem do Quat Cheddar Baccon">
         </section>
-            <h3><strong>O que vem nesse MONSTRO?</strong></h3>
-            <p>2 Fatias de pãozão brioche</p>
-            <p>4 Hamburgueres de 150g de fraldinha no ponto</p>
-            <p>4 Camadas de queijo cheddar derretendo</p>
-            <p>4 Camadas de Bacon crocantinho</p>
-        <section>
 
+        <section class="ingredientes">
+            <h3 class="ingredientes-titulo"><strong>O que vem nesse MONSTRO?</strong></h3>
+            <p class="ingrediente-pao">2 Fatias de pãozão brioche</p>
+            <p class="ingredientes-carne">4 Hamburgueres de 150g de fraldinha no ponto</p>
+            <p class="ingredientes-queijo">4 Camadas de queijo cheddar derretendo</p>
+            <p class="ingredientes-bacon">4 Camadas de Bacon crocantinho</p>
         </section>
     </main>
 
-    <footer>
-        <img src="Logo.png" alt="Logo Rodapé">
+    <footer class="rodape">
+        <img class="imagem-rodape" src="Logo.png" alt="Logo Rodapé">
     </footer>
 </body>
 
